# Infantry-2023

./: README.md  draw_state.py
rmos_bringup/: CMakeLists.txt  package.xml
rmos_bringup/configure/: daheng_cam_info.yaml  daheng_camera.xml
src/Algorithm/: CMakeLists.txt  package.xml
src/Algorithm/AIOF-IP/: CMakeLists.txt
src/Algorithm/AIOF-IP/config/: detector.yaml  module.yaml  rtc_rm_v5.yaml  rtc_rm_v7-5.yaml  rtc_rm_v7.yaml  rtc_rm_v7_rune.yaml
src/Algorithm/AIOF-IP/include/: Common.hpp  CvPreProcessing.hpp  Module.hpp  ModuleRegister.hpp  OVInterpreter.hpp  RM-V5-PostProcesser.hpp  RM-V7-PostProcesser.hpp  Runtime.hpp
src/Algorithm/AIOF-IP/model/: ov_model_convert.py
src/Algorithm/AIOF-IP/model/final_weights/: best.onnx  best.pt  best.torchscript.pt  last.pt
src/Algorithm/AIOF-IP/model/rm-v5/: openvino_convert_v5_onnx_model.sh  output.xml
src/Algorithm/AIOF-IP/model/rm-v7/: best.onnx  openvino_convert_v7_onnx_model.sh  output.xml
src/Algorithm/AIOF-IP/model/rm-v7-rune/: best.onnx  output.xml
src/Algorithm/AIOF-IP/model/weights_104/: best.onnx
src/Algorithm/AIOF-IP/model/weights_104_3080/: best.onnx
src/Algorithm/AIOF-IP/model/weights_adapt/: best.onnx  best.pt  best.torchscript.pt  last.pt
src/Algorithm/AIOF-IP/model/yolov5-face/: openvino_convert_onnx_model.sh  output.xml
src/Algorithm/AIOF-IP/src/: Module.cc
src/Algorithm/configure/Debug/: debug.xml
src/Algorithm/configure/Detector/classifier/onnx_classifier/model/: modelv3_150.onnx
src/Algorithm/configure/Detector/detector/rune_detector/: Rune.xml
src/Algorithm/configure/Detector/fittool/buff_state/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  1690948728.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/Algorithm/configure/Processer/ballistic_solver/: params.xml
src/Algorithm/configure/Processer/controler/: param.xml
src/Algorithm/include/Base/: const.hpp  rune_armor.hpp
src/Algorithm/include/Camera/camera_interfaces/: camera_interface.hpp
src/Algorithm/include/Camera/daheng/: daheng.hpp
src/Algorithm/include/Dectector/detector/rune_detector/: rune_detector.hpp
src/Algorithm/include/Dectector/fittool/: Fitting.h
src/Algorithm/include/Dectector/solver/pnp_solver/: pnp_solver.hpp
src/Algorithm/include/Processer/: ballistic_solver.hpp  controler.hpp
src/Algorithm/include/Tool/tracker/: tracker.hpp
src/Algorithm/src/Base/: rune_armor.cpp
src/Algorithm/src/Camera/daheng/: daheng.cpp
src/Algorithm/src/Debug/: debug.cpp
src/Algorithm/src/Dectector/classifier/onnx_classifier/: onnx_classifier.cpp
src/Algorithm/src/Dectector/detector/rune_detector/: dl_rune_detector.cpp
src/Algorithm/src/Dectector/fittool/: Fitting.cpp
src/Algorithm/src/Dectector/solver/pnp_solver/: pnp_solver.cpp
src/Algorithm/src/Processer/: ballistic_solver.cpp  controler.cpp
src/Algorithm/src/Tool/tracker/: tracker.cpp
src/rmos_cam/: CMakeLists.txt  package.xml
src/rmos_cam/include/: cam_node.hpp
src/rmos_cam/src/: daheng_cam_node.cpp
src/rmos_detector/: CMakeLists.txt
src/rmos_detector/include/: detector_node.hpp
src/rmos_detector/src/: basic_detector_node.cpp
src/rmos_interfaces/: CMakeLists.txt
src/rmos_interfaces/msg/: Armors.msg  Exp.msg  Target.msg
src/rmos_processer/: CMakeLists.txt
src/rmos_processer/include/: processer_node.hpp
src/rmos_processer/src/: processer_node.cpp
src/rmos_transporter/: CMakeLists.txt
src/rmos_transporter/src/: can_comm_node.cpp
